# neon

./: ESP32-S2-MINI-2.bak  ESP32-S2-MINI-2.kicad_sym  README.md  fp-info-cache  hack_matrix.csv  hack_matrix.kicad_pcb  hack_matrix.kicad_prl  hack_matrix.kicad_prl.bak  hack_matrix.kicad_pro  hack_matrix.kicad_sch  ~hack_matrix.kicad_sch.lck
DORABO.pretty/: DB300V-5.0-2P-BU-S.kicad_mod
HRO_TYPE-C-31-M-12.pretty/: HRO_TYPE-C-31-M-12.kicad_mod
TS-1088-AR02016.pretty/: SW_TS-1088-AR02016.kicad_mod
backend/: .env  Dockerfile  blinka_displayio_shmem.py  docker-compose.yml  main.go
backend/go/: Dockerfile  docker-compose.yml  go.mod
backend/runner/: Dockerfile  displayio_wrapper.py  neon_display.py  neon_wrappers.py  requirements.txt
backend/rust/: Cargo.toml  Dockerfile  docker-compose.yml
backend/rust/runner/: Dockerfile  framebufferio.py  requirements.txt
backend/rust/src/: main.rs
gerbers/: hack_matrix-B_Cu.gbr  hack_matrix-B_Mask.gbr  hack_matrix-B_Paste.gbr  hack_matrix-B_Silkscreen.gbr  hack_matrix-Edge_Cuts.gbr  hack_matrix-F_Adhesive.gbr  hack_matrix-F_Courtyard.gbr  hack_matrix-F_Cu.gbr  hack_matrix-F_Fab.gbr  hack_matrix-F_Mask.gbr  hack_matrix-F_Paste.gbr  hack_matrix-F_Silkscreen.gbr  hack_matrix-NPTH.drl  hack_matrix-PTH.drl  hack_matrix-User_Drawings.gbr  hack_matrix-all-pos.csv  hack_matrix-job.gbrjob
pcb/: fp-lib-table  hack_matrix.kicad_pcb  hack_matrix.kicad_prl  hack_matrix.kicad_prl.kicad_sym  hack_matrix.kicad_pro  hack_matrix.kicad_sch  sym-lib-table
pcb/gerbers/: bom.csv  hack_matrix-B_Cu.gbr  (+22 more)
website/: .gitignore  package.json
(+29 files in other folders)
