[package]
name = "neon-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
tracing = "0.1"
tracing-subscriber = "0.3"
libc = "0.2"
parking_lot = "0.12" 